Append links to old one